Resolves: tdf#89731 numberingChange feature not available in writer

Change-Id: Ie779e78fc3c7ccf717117513d9187697c22cc51a
(cherry picked from commit 0123bbbc4d07fd7d6c233f67139984ab3cd4555d)
Reviewed-on: https://gerrit.libreoffice.org/15932
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>